Fixed scrollbars on chromium browsers

--- a/frontend/src/components/PopupMenu/PopupMenu.css
+++ b/frontend/src/components/PopupMenu/PopupMenu.css
@@ -19,7 +19,7 @@
 }
 
 .popup-content {
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .popup-title {
